[package]
name = "lsd"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8", default-features = false, features = ["http2", "query", "form", "json", "multipart", "macros", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.10", features = ["cookie"] }
askama = { version = "0.13", features = ["serde_json"] }
askama_web = { version = "0.13", features = ["axum-0.8"] }
cookie = "0.18"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-rustls-tls", "serde"] }
rustls = "0.23"
rustls-acme = { version = "0.12", features = ["axum"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "sync", "macros"] }
tokio_schedule = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header", "compression-br", "request-id", "trace", "util"] }
tower-serve-static = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "json", "multipart", "rustls-tls"] }

anyhow = "1"
thiserror = "2"
chrono-tz = { version = "0.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jpeg-encoder = "0.6"
secrecy = { version = "0.10.3", features = ["serde"] }

# Add a little optimization to debug builds
[profile.dev]
opt-level = 1
# And since they don't get recompiled often, fully optimize dependencies
[profile.dev.package."*"]
opt-level = 3
